
syntax = "proto3";

package proto;

option java_package = "cluster.external.shard.proto";

option java_multiple_files = true;

message Val {
  oneof val {
    string str = 1;
    int64 num = 2;
    bytes byteArray = 3;
  }
}

message ShardInfo {
  string shardId = 3;
  bool isPrimary = 4;
}

message DataNodeInfo {
  int32 dataNodeId = 1;
  string address = 2;
}

message PutShardRequest {
    DataNodeInfo dataNodeInfo = 1;
    repeated ShardInfo shardInfo = 2;
}

message CommonResponse {
    int32 status = 1; //响应码（0：success -1：error）
    string msg = 2; //响应信息
}

message GetRequest {
  string key = 1;
  int64 minCommitIndex = 2;
}

message GetResult {
  Val val = 1;

}

message ShardResponse {
  int64 commitIndex = 1;
  oneof result {
    CommonResponse commonResponse = 2;
    GetResult getResult = 3;
  };
}


////get
//message GetShardRequest {
//  int32 shardId = 1; //(多个)
//}
//
//message GetShardResponse {
//  //随机pick分片所在的节点，返回节点所在信息
//  int32 dataNodeId = 1;
//  string address = 2;
//}


service ShardRequestHandler {
  rpc put (PutShardRequest) returns (ShardResponse);
  rpc get (GetRequest) returns (ShardResponse);

}

